@@ -2,6 +2,8 @@ Revision history for Perl extension Class-Enum
 
 {{$NEXT}}
 
+	* Add `from_ordinal` class method.
+
 0.02 2013-07-10T10:26:54Z
 
     * Modify POD, add `is_*` method.
